# Advanced-state-of-the-art-quantum-supercomputer

./: .gitignore  COMPREHENSIVE_EXPLORATION_REPORT.md  README.md  install_tfq_from_packages.sh
quantum-os/: GENERAL_QUANTUM_SUPERCOMPUTER.md  GOOGLE_PEER_REVIEW_GUIDE.md  HYBRID_CAPABILITIES.md  INSTALL.md  PROJECT_SUMMARY.md  QUANTUM_ECHOES_INTEGRATION.md  QUICK_START_HYBRID.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_quantum_os.py
quantum-os/algorithms/: __init__.py  amplitude_amplification.py  grover.py  qaoa.py  qft.py  shor.py  vqe.py
quantum-os/backends/: __init__.py  base.py  cirq_backend.py  qiskit_backend.py  tfq_backend.py
quantum-os/benchmarks/: README.md  __init__.py  enhanced_quantum_benchmarks.py  quantum_performance_benchmarks.py  run_all_tests.py  system_verification_tests.py
quantum-os/classical/: __init__.py  algorithms.py  engine.py  optimizer.py
quantum-os/compiler/: __init__.py  optimizer.py  transpiler.py
quantum-os/config/: __init__.py  settings.py
quantum-os/core/: __init__.py  kernel.py  quantum_resource_pool.py  quantum_vm.py  resource_manager.py  scheduler.py
quantum-os/error_correction/: __init__.py  mitigation.py  stabilizer_codes.py  surface_codes.py
quantum-os/examples/: basic_usage.py  general_quantum_supercomputer.py  hybrid_supercomputer_demo.py  quantum_supercomputer_demo.py
quantum-os/gpu/: __init__.py  accelerator.py
quantum-os/network/: __init__.py  distributed_executor.py
quantum-os/plugins/: __init__.py  loader.py  registry.py
quantum-os/quantum_echoes/: COMPLETION_SUMMARY.md  README.md  (+3 more)
(+59 files in other folders)
