[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_os"
version = "1.0.0"
description = "Advanced Quantum Supercomputer Operating System"
authors = [{name = "Brionengine Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cirq>=1.3.0",
    "cirq-google>=1.3.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "qiskit-ibm-runtime>=0.17.0",
    "qiskit-ibm-provider>=0.8.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "psutil>=5.9.6",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*", "examples*", "benchmarks*"]
